Eliminacion de errores previos